--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.9.5",
     "@clerk/nextjs": "^5.0.1",
     "@prisma/client": "^6.0.0",
     "@radix-ui/react-checkbox": "^1.1.2",
